Made WebApi and use of Vue to render the musicians client side

--- a/GUI_JavaJam/GUI_JavaJam.csproj
+++ b/GUI_JavaJam/GUI_JavaJam.csproj
@@ -11,15 +11,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="jQuery" Version="3.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.9" />
   </ItemGroup>
 
   <ItemGroup>
     <None Include="Views\Home\Index.cshtml" />
     <None Include="Views\Home\Menu.cshtml" />
-    <None Include="Views\Home\Music.cshtml" />
+    <None Include="Views\Music\Index.cshtml" />
   </ItemGroup>
 
 </Project>
